--- a/cart.html
+++ b/cart.html
@@ -104,7 +104,7 @@
         </div>
     </div>
   </div>
-
+<!--wwwwwwwww-->
   <footer class="bg-light text-center p-3 mt-4">
     <p>&copy; Shoe Solutions. All rights reserved.</p>
   </footer>
