--- a/offwhite.html
+++ b/offwhite.html
@@ -54,7 +54,7 @@
   <div class="container mt-4">
     <h1>Off-White Shoes</h1>
   </div>
-
+<!--wwwwwwwww-->
   <footer id="bottom" class="bg-light text-center p-3 mt-4">
     <p>&copy; Shoe Solutions. All rights reserved.</p>
   </footer>
