--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@
   <footer class="bg-light text-center p-3 mt-4">
     <p>&copy; Shoe Solutions. All rights reserved.</p>
   </footer>
-  
+  <!--wwwwwwwww-->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
